--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -3,7 +3,9 @@
     <a th:fragment="readonly(uuid, title, thumbnail,author,description,categories)"
        th:href="@{/article/{uuid}(uuid=${uuid})}"
        class="card h-100 shadow-sm text-decoration-none border-0">
-        <img th:src="@{${thumbnail}}" alt="picture" class="bd-placeholder-img card-img-top">
+        <div class="w-100 overflow-hidden" style="height: 195px;">
+            <img th:src="@{${thumbnail}}" alt="picture" class="bd-placeholder-img card-img-top object-fit-cover">
+        </div>
         <div class="card-body position-relative">
             <div class="position-absolute start-0 translate-middle-y">
                 <div class="d-flex">
@@ -50,7 +52,9 @@
     <!--    Card Action ~ Start -->
     <div class="card shadow-sm border-0 h-100"
          th:fragment="action(uuid, title, thumbnail,author,description,categories)">
-        <img th:src="@{${thumbnail}}" alt="picture" class="bd-placeholder-img card-img-top">
+        <div class="w-100 overflow-hidden" style="height: 195px;">
+            <img th:src="@{${thumbnail}}" alt="picture" class="bd-placeholder-img card-img-top object-fit-cover">
+        </div>
         <div class="card-body position-relative">
             <div class="position-absolute start-0 translate-middle-y">
                 <div class="d-flex">
