--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
                 <div class="card shadow-sm border-0">
                     <img src="https://image.slidesharecdn.com/premhenna-140818000904-phpapp01/95/prem-henna-pvt-ltd-indore-herbal-mehandi-7-638.jpg?cb=1408321492" class="w-100" alt="banner">
                     <h3 class="card-header">
-                        Total Category: <span th:text="${categories.size()}"></span>
+                        Popular Category: <span th:text="${categories.size()}"></span>
                     </h3>
                     <div class="card-body">
                         <ul class="list-group list-group-flush">
