--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -29,10 +29,11 @@
             <br>
             <h5 class="card-title" th:text="${title}">Card title</h5>
             <div>
-                <span class="badge rounded-pill text-bg-warning bg-cat"
+                <span class="badge rounded-pill bg-transparent bg-cat"
                       th:each="category : ${categories}"
                       th:object="${category}"
                       th:text="${category.name}"
+                      th:attrappend="style='border: 1px solid '+${category.color} + '!important;color:'+ ${category.color}"
                 >
                 </span>
             </div>
@@ -86,11 +87,13 @@
             <div>
                 <a
 
-                        class="badge rounded-pill text-bg-warning text-decoration-none"
+                        class="badge rounded-pill bg-transparent text-decoration-none"
                         th:each="category : ${categories}"
                         th:href="@{/categories/{id}(id=${category.id})}"
                         th:object="${category}"
-                        th:text="${category.name}">Warning</a>
+                        th:text="${category.name}"
+                        th:attrappend="style='border: 1px solid '+${category.color} + '!important;color:'+ ${category.color}"
+                >Warning</a>
             </div>
         </div>
         <div class="card-footer border-0 bg-transparent d-flex justify-content-between align-items-center">
