--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="/authors">Authors</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Category</a>
+                    <a href="/categories" class="nav-link">Category</a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
